--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,5 +1,5 @@
 <nav>
-  <div class="logo">LOGO</div>
+  <div class="logo"><a href="/" style="color: #eee">AGRIWHEEL</a></div>
   <ul class="list">
     <li><a href="/">Home</a></li>
     <li><a href="/disease-prediction">Disease prediction</a></li>
