--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -28,6 +28,8 @@
         Name of the disease:
         <b style="text-transform: uppercase">{{posts[2]['disease']}}</b>
       </p>
+      <br />
+      <!-- about -->
       <h4>About</h4>
       <p>{{posts[2]['about']}}</p>
     </div>
