--- a/static/styles.css
+++ b/static/styles.css
@@ -143,11 +143,12 @@ select {
 .disease_col {
   width: 50%;
   height: 100%;
-  padding: 1em;
+  padding: 1.5em;
 }
 
 .disease_text {
-  overflow: scroll;
+  overflow-y: scroll;
+  padding: 1em;
 }
 
 .disease_col img {
