--- a/templates/index.html
+++ b/templates/index.html
@@ -139,4 +139,10 @@
   // setInterval("window.location.reload()", 50000);
 </script>
 
+<br />
+
+{% include 'footer.html' %}
+
+<br />
+
 {% endblock %}
