--- a/templates/nav.html
+++ b/templates/nav.html
@@ -2,6 +2,6 @@
   <div class="logo"><a href="/" style="color: #eee">AGRIWHEEL</a></div>
   <ul class="list">
     <li><a href="/">Home</a></li>
-    <li><a href="/disease-prediction">Disease prediction</a></li>
+    <li><a href="/disease-prediction">Crop care</a></li>
   </ul>
 </nav>
