--- a/templates/index.html
+++ b/templates/index.html
@@ -83,8 +83,8 @@
           style="width: 100px; height: 100px"
         />
         <div>
-          <p>Temperature : <b>{{posts[3]['Temperature (°C)']}}</b></p>
-          <p>Humidity : <b>{{posts[3]['Humidity']}}</b></p>
+          <p>Temperature : <b>{{posts[3]['Temp']}}</b></p>
+          <!-- <p>Humidity : <b>{{posts[3]['Humidity']}}</b></p> -->
           <p>Condition : <b>{{posts[1][2]}}</b></p>
         </div>
       </div>
@@ -93,21 +93,19 @@
         style="background-image: url(../static/img/Nature.png)"
       >
         <div>
-          <p>Nitrogen (N) : <b>{{posts[3]['Nitrogen']}}</b></p>
-          <p>Phosporus (P) : <b>{{posts[3]['Phosporus']}}</b></p>
-          <p>Pottasium (K) : <b>{{posts[3]['Pottasium']}}</b></p>
+          <p>Nitrogen (N) : <b>{{posts[3]['Nitro']}}</b></p>
+          <p>Phosporus (P) : <b>{{posts[3]['Phosp']}}</b></p>
+          <p>Pottasium (K) : <b>{{posts[3]['Potas']}}</b></p>
           <p>pH : <b>{{posts[3]['pH']}}</b></p>
         </div>
         <div>
-          <p>Water Level : <b>{{posts[3]['Water Level (mm)']}}</b></p>
-          <p>Moisture : <b>{{posts[3]['Moisture (%)']}}</b></p>
+          <p>Water Level : <b>{{posts[3]['level']}}</b></p>
+          <p>Moisture : <b>{{posts[3]['Moist']}}</b></p>
           <p>
             Electric conductivity :
-            <b>{{posts[3]['Electric conductivity']}}</b>
+            <b>{{posts[3]['EC']}}</b>
           </p>
-          <p>
-            Field temperature : <b>{{posts[3]['Field Temperature (°C)']}}</b>
-          </p>
+          <p>Field temperature : <b>{{posts[3]['Temp']}}</b></p>
         </div>
       </div>
     </div>
